--- a/app/src/main/res/layout/activity_task_form.xml
+++ b/app/src/main/res/layout/activity_task_form.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#fafafa"
         android:hint="@string/descricao"
+        android:inputType="textCapSentences"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -93,6 +94,7 @@
         android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
         android:text="@string/adicionar_tarefa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
