Add the TASK logo

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="NOME USUÁRIO"
+        android:text="ALEXANDRE"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </LinearLayout>
