--- a/app/src/main/res/layout/activity_task_form.xml
+++ b/app/src/main/res/layout/activity_task_form.xml
@@ -20,8 +20,8 @@
 
     <View
         android:id="@+id/view_description"
+        style="@style/AppTheme.DefaultView"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_description" />
 
     <TextView
@@ -45,8 +45,8 @@
 
     <View
         android:id="@+id/view_complete"
+        style="@style/AppTheme.DefaultView"
         android:layout_width="0dp"
-        android:layout_height="1dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_priority" />
@@ -64,8 +64,8 @@
 
     <View
         android:id="@+id/view_date"
+        style="@style/AppTheme.DefaultView"
         android:layout_width="0dp"
-        android:layout_height="1dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/check_complete" />
@@ -82,16 +82,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_date" />
 
-    <View
-        android:id="@+id/view_save"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_date" />
-
     <Button
         android:id="@+id/button_save"
+        style="@style/AppTheme.DefaulButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
